--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shmeem Mohammed
-logo: /assets/img/shameem-headshot.png
-#description: text below image
+logo: /assets/img/shameem_headshot.png
+description: Empowering Businesses with Data Driven Decisions
 #show_downloads: true
 theme: jekyll-theme-minimal
